# goit-pythonweb-hw-012

./: .coverage  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/v1/: auth.py  contacts.py  users.py
app/conf/: config.py  limiter.py
app/db/: models.py
app/repositories/: auth.py  contacts.py
app/schemas/: contacts.py  users.py
app/services/: auth.py  cache.py  email.py  upload_file.py  user.py
app/services/templates/: reset_password_email.html
docs/: conf.py  modules.rst
docs/_build/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/app/api/v1/: auth.html  contacts.html  users.html
docs/_build/_modules/app/repositories/: auth.html  contacts.html
docs/_build/_modules/app/services/: auth.html  cache.html  email.html  upload_file.html  user.html
docs/_build/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 035abc80ae27_add_users.py
tests/: conftest.py  test_auth_integration.py  test_contacts_integration.py  test_repositories.py
